# cpubrrr

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.claude/: launch.json
demo/: demo.html
docs/: NEXT_MODELS.md  PAPER.md  PAPER_V2.md  PLAN.md  QWEN3_SPEC.md  RESEARCH_LOG.md  RESEARCH_LOG_V2.md  TEACHING.md  TEACHING_V2.md
metal/: disp_cost.m  engine_metal.m  gpu_bw.swift  mmap_bw.m  sync_lat.m  sync_lat.swift  sync_lat2.m  sync_lat3.m
scripts/: attn_reference.py  bench_hybrid.sh  bench_ollama.sh  dbg_forward.py  dbg_multi.py  demo_server.py  dump_tokenizer.py  extract_experts.py  ffn_reference.py  gguf_index.py  setup_gptoss.sh  setup_model.sh
src/: main.rs
